--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cards",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://FedorKarasev.github.io/cards-test",
+  "homepage": "https://fedorkarasev.github.io/cards-test/",
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
